--- a/style/style.css
+++ b/style/style.css
@@ -252,7 +252,7 @@ footer ol {
 /********************************************************
 CSS EFFECTS
 *********************************************************/
-li:hover {
+.hover:hover {
     /* background: rgb(28, 26, 26); */
     background: linear-gradient(0.25turn,gray, rgb(43, 43, 45));
     font-weight: 300;
